--- a/views/Facturacion/Aprobacion/troncal.html
+++ b/views/Facturacion/Aprobacion/troncal.html
@@ -90,16 +90,7 @@
 
                         </tbody>
                     </table>
-                    <div class="col-md-1">
-                        <p>
-                            Acciones :
-                        </p>
-                    </div>
-                    <div class="col-md-6">
-                        <p>
-                            <button class="btn btn-info" >Cancelar</button>
-                        </p>
-                    </div>
+
                 </div>
 
             </div>
@@ -133,62 +124,71 @@
                         </thead>
                         <tbody>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">14222</a></td>
+                            <td><a href="carga_todos.html">214222</a></td>
                             <td>125412</td>
                             <td>00 CD-SANTIAGO</td>
-                            <td>45 CONCEPCIÓN</td>
+                            <td>41-TALCA</td>
                             <td>12/12/16 14:59:02-Z</td>
-                            <td>CARGANDO</td>
+                            <td>ENTREGADO</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">14222</a></td>
+                            <td><a href="carga_todos.html">214222</a></td>
                             <td>125413</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>41 TALCA</td>
                             <td>12/12/16 15:01:14-Z</td>
-                            <td>CREADO</td>
+                            <td>ENTREGADO</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">14223</a></td>
+                            <td><a href="carga_todos.html">214222</a></td>
                             <td>125414</td>
                             <td>00 CD-SANTIAGO</td>
-                            <td>14 ANTOFAGASTA</td>
+                            <td>41-TALCA</td>
                             <td>12/12/16 15:11:46-Z</td>
-                            <td>RECIBIDO</td>
+                            <td>ENTREGADO</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">14223</a></td>
+                            <td><a href="carga_todos.html">214222</a></td>
                             <td>125415</td>
                             <td>00 CD-SANTIAGO</td>
-                            <td>15 CALAMA</td>
+                            <td>45-CONCEPCION</td>
                             <td>12/12/16 15:14:59-Z</td>
-                            <td>EN VIAJE</td>
+                            <td>ENTREGADO</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">14224</a></td>
+                            <td><a href="carga_todos.html">214222</a></td>
                             <td>125416</td>
                             <td>00 CD-SANTIAGO</td>
-                            <td>05 PARQUE ARAUCO</td>
+                            <td>45-CONCEPCION</td>
                             <td>05/01/17 10:14:59-Z</td>
-                            <td>CREADO</td>
+                            <td>ENTREGADO</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">14225</a></td>
+                            <td><a href="carga_todos.html">214222</a></td>
                             <td>125417</td>
                             <td>00 CD-SANTIAGO</td>
-                            <td>12 MALL PLAZA NORTE</td>
+                            <td>45- CONCEPCION</td>
                             <td>05/01/17 09:04:59-Z</td>
-                            <td>ANULADO</td>
+                            <td>ENTREGADO</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         </tbody>
                     </table>
-
+                    <div class="col-md-1">
+                        <p>
+                            Acciones :
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <p>
+                            <button class="btn btn-info" >Cancelar</button>
+                        </p>
+                    </div>
                 </div>
 
             </div>
