--- a/views/Facturacion/Aprobacion/troncal.html
+++ b/views/Facturacion/Aprobacion/troncal.html
@@ -83,9 +83,9 @@
                             <td>CERRADO</td>
                             <td>360,500</td>
                             <td>09/02/17 12:15:12 </td>
-                            <td>FACTURADO</td>
+                            <td>ESPERANDO APROBACION</td>
                             <td>1002</td>
-                            <td>CREADA</td>
+                            <td>VALIDADA</td>
                         </tr>
 
                         </tbody>
@@ -119,7 +119,7 @@
                             <th>Destino</th>
                             <th>Fecha</th>
                             <th>Estado</th>
-                            <th>Cerrar</th>
+
                         </tr>
                         </thead>
                         <tbody>
@@ -130,7 +130,7 @@
                             <td>41-TALCA</td>
                             <td>12/12/16 14:59:02-Z</td>
                             <td>ENTREGADO</td>
-                            <td><input type="checkbox" value="es"> </td>
+
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">214222</a></td>
@@ -139,7 +139,7 @@
                             <td>41 TALCA</td>
                             <td>12/12/16 15:01:14-Z</td>
                             <td>ENTREGADO</td>
-                            <td><input type="checkbox" value="es"> </td>
+
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">214222</a></td>
@@ -148,7 +148,7 @@
                             <td>41-TALCA</td>
                             <td>12/12/16 15:11:46-Z</td>
                             <td>ENTREGADO</td>
-                            <td><input type="checkbox" value="es"> </td>
+
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">214222</a></td>
@@ -157,7 +157,7 @@
                             <td>45-CONCEPCION</td>
                             <td>12/12/16 15:14:59-Z</td>
                             <td>ENTREGADO</td>
-                            <td><input type="checkbox" value="es"> </td>
+
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">214222</a></td>
@@ -166,7 +166,7 @@
                             <td>45-CONCEPCION</td>
                             <td>05/01/17 10:14:59-Z</td>
                             <td>ENTREGADO</td>
-                            <td><input type="checkbox" value="es"> </td>
+
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">214222</a></td>
@@ -175,7 +175,7 @@
                             <td>45- CONCEPCION</td>
                             <td>05/01/17 09:04:59-Z</td>
                             <td>ENTREGADO</td>
-                            <td><input type="checkbox" value="es"> </td>
+
                         </tr>
                         </tbody>
                     </table>
