--- a/views/Facturacion/Validacion/troncal.html
+++ b/views/Facturacion/Validacion/troncal.html
@@ -1,1 +1,199 @@
-validacion troncal
+<div ng-controller="B2B_Fact_Obje_Resp_Controller">
+    <!-- begin breadcrumb -->
+    <ol class="breadcrumb pull-right">
+        <li><a href="javascript:;">Home</a></li>
+        <li><a href="javascript:;">Facturación</a></li>
+        <li><a href="javascript:;">Valida OF</a></li>
+        <li class="active">20202 - Detalle Troncal</li>
+    </ol>
+    <!-- end breadcrumb -->
+    <!-- begin page-header -->
+    <h1 class="page-header">Detalle Troncal <small>Gestión de Facturación</small></h1>
+    <!-- end page-header -->
+
+    <!-- begin row -->
+    <div class="row">
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Tabla Despacho </h4>
+                </div>
+
+                <div class="panel-body">
+                    <table class="table table-striped table-bordered">
+                        <tr><td>Numero de Viaje</td><td>214222</td><td>Tipo de Viaje</td><td>TRT</td></tr>
+                        <tr><td>Origen</td><td>00 CD Santiago</td><td>Destino</td><td>45 CONCEPCION</td></tr>
+                        <tr><td>Fecha</td><td>12/12/16 15:25:49</td><td>Estado</td><td>CERRADA</td></tr>
+                        <tr><td>Patente</td><td>FKCY-89</td><td>Tipo de Vehiculo</td><td>CM40</td></tr>
+                        <tr><td>Solicitud</td><td>10041</td><td>Conductor</td><td>09258528-5</td></tr>
+                        <tr><td>Nombre</td><td>Roberto Cienfuegos D.</td><td>Transportista</td><td>Transportes del Pacifico</td></tr>
+
+                    </table>
+                </div>
+
+            </div>
+            <!-- end panel -->
+        </div>
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">DETALLE DESPACHO </h4>
+                </div>
+
+                <div class="panel-body">
+                    <table id="data-table" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>N° Despacho</th>
+                            <th>Tipo</th>
+                            <th>Proveedor</th>
+                            <th>Tipo de Camión</th>
+                            <th>Origen</th>
+                            <th>Destino</th>
+                            <th>Estado Via.</th>
+                            <th>Tarifa</th>
+                            <th>Fecha Fact</th>
+                            <th>Estado Fac.</th>
+                            <th>N° Orn Fact</th>
+                            <th>Estado Orn Fact</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td><a href="../../carga_todos.html">214222</a></td>
+                            <td>TRONCAL</td>
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>CM40</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>45 CONCEPCIÓN</td>
+                            <td>CERRADO</td>
+                            <td>360,500</td>
+                            <td>09/02/17 12:15:12 </td>
+                            <td>ESPERANDO VALIDACION</td>
+                            <td>1002</td>
+                            <td>CREADA</td>
+                        </tr>
+
+                        </tbody>
+                    </table>
+
+                </div>
+
+            </div>
+            <!-- end panel -->
+        </div>
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Tabla Manifiestos de Carga </h4>
+                </div>
+
+                <div class="panel-body">
+                    <table id="data-table" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>N° Viaje</th>
+                            <th>N° MC</th>
+                            <th>Origen</th>
+                            <th>Destino</th>
+                            <th>Fecha</th>
+                            <th>Estado</th>
+
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">214222</a></td>
+                            <td>125412</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>41-TALCA</td>
+                            <td>12/12/16 14:59:02-Z</td>
+                            <td>ENTREGADO</td>
+
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">214222</a></td>
+                            <td>125413</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>41 TALCA</td>
+                            <td>12/12/16 15:01:14-Z</td>
+                            <td>ENTREGADO</td>
+
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">214222</a></td>
+                            <td>125414</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>41-TALCA</td>
+                            <td>12/12/16 15:11:46-Z</td>
+                            <td>ENTREGADO</td>
+
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">214222</a></td>
+                            <td>125415</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>45-CONCEPCION</td>
+                            <td>12/12/16 15:14:59-Z</td>
+                            <td>ENTREGADO</td>
+
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">214222</a></td>
+                            <td>125416</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>45-CONCEPCION</td>
+                            <td>05/01/17 10:14:59-Z</td>
+                            <td>ENTREGADO</td>
+
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">214222</a></td>
+                            <td>125417</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>45- CONCEPCION</td>
+                            <td>05/01/17 09:04:59-Z</td>
+                            <td>ENTREGADO</td>
+
+                        </tr>
+                        </tbody>
+                    </table>
+                    <div class="col-md-1">
+                        <p>
+                            Acciones :
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <p>
+                            <button class="btn btn-info" >Cancelar</button>
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+            <!-- end panel -->
+        </div>
+    </div>
+    <!-- end row -->
+</div>
