--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -40,10 +40,18 @@
                     <li ui-sref-active="active"><a ui-sref="app.consulta.parciales">Despachos Parciales</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.consulta.dashboard">Dashboard Transportes</a></li>
                     <li class="has-sub" ng-class="{active:$state.includes('app.consulta.viaje')}">
-                        <a href="javascript:;"><b class="caret pull-right"></b>Viajes</a>
+                    <a href="javascript:;"><b class="caret pull-right"></b>Viajes</a>
+                    <ul class="sub-menu">
+                        <li ui-sref-active="active"><a ui-sref="app.consulta.viaje.troncal">Troncal</a></li>
+                        <li ui-sref-active="active"><a ui-sref="app.consulta.viaje.umilla">Ul. Milla/Direc.Cnt</a></li>
+                    </ul>
+                </li>
+                    <li class="has-sub" ng-class="{active:$state.includes('app.consulta.supervisor')}">
+                        <a href="javascript:;"><b class="caret pull-right"></b>Supervisor</a>
                         <ul class="sub-menu">
-                            <li ui-sref-active="active"><a ui-sref="app.consulta.viaje.troncal">Troncal</a></li>
-                            <li ui-sref-active="active"><a ui-sref="app.consulta.viaje.umilla">Ul. Milla/Direc.Cnt</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.consulta.supervisor.anular">Anular</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.consulta.supervisor.troncal">Troncal</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.consulta.supervisor.umilla">Ul. Milla/Direc.Cnt</a></li>
                         </ul>
                     </li>
                     <li class="has-sub" ng-class="{active:$state.includes('app.consulta.tarifa')}">
