--- a/views/Facturacion/Modifica/viaje.html
+++ b/views/Facturacion/Modifica/viaje.html
@@ -8,7 +8,7 @@
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Mofificar Tarifa Viaje <small>Gestión de Facturación</small></h1>
+    <h1 class="page-header">Modificar Tarifa Viaje <small>Gestión de Facturación</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
