--- a/views/Consulta/Supervisor/anular.html
+++ b/views/Consulta/Supervisor/anular.html
@@ -157,7 +157,7 @@
                             <td>TRANSPORTES DEL PACIFICO</td>
                             <td>CM40</td>
                             <td>00 CD-SANTIAGO</td>
-                            <td>36 ANTOFAGASTA</td>app
+                            <td>36 ANTOFAGASTA</td>
                             <td>ANULADO</td>
                             <td>705,000</td>
                             <td><input type="checkbox" value="es"> </td>
