--- a/views/Consulta/Supervisor/anular.html
+++ b/views/Consulta/Supervisor/anular.html
@@ -113,7 +113,7 @@
                         </thead>
                         <tbody>
                         <tr class="odd gradeX">
-                            <td><a href="../../carga_todos.html">214222</a></td>.
+                            <td><a href="../../carga_todos.html">214222</a></td>
                             <td>TRANSPORTES DEL PACIFICO</td>
                             <td>CM40</td>
                             <td>00 CD-SANTIAGO</td>
