--- a/views/Consulta/Tarifa/troncal.html
+++ b/views/Consulta/Tarifa/troncal.html
@@ -1,1 +1,189 @@
-tarifa troncal
+<div ng-controller="20501_Controller">
+    <!-- begin breadcrumb -->
+    <ol class="breadcrumb pull-right">
+        <li><a href="javascript:;">Home</a></li>
+        <li><a href="javascript:;">Consukta</a></li>
+        <li><a href="javascript:;">Tarifa</a></li>
+        <li class="active">10401 - Troncal</li>
+    </ol>
+    <!-- end breadcrumb -->
+    <!-- begin page-header -->
+    <h1 class="page-header"> Tarifa Troncal <small>Gestión de Consultas</small></h1>
+    <!-- end page-header -->
+
+    <!-- begin row -->
+    <div class="row">
+
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Filtros de Busqueda </h4>
+                </div>
+
+                <div class="panel-body">
+                    <form class="form-horizontal">
+
+
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Origen</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>00 CD- SANTIAGO</option>
+                                </select>
+                            </div>
+                            <label class="col-md-2 control-label">Destino</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>45 CONCEPCION</option>
+                                    <option>41 TALCA</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Fecha</label>
+                            <div class="col-md-6">
+                                <div class="input-group input-daterange">
+                                    <input type="text" class="form-control" name="start" placeholder="Inicio" />
+                                    <span class="input-group-addon">a</span>
+                                    <input type="text" class="form-control" name="end" placeholder="Termino" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Estado</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>Habilitado</option>
+                                    <option>Suspendido</option>
+                                </select>
+                            </div>
+                        </div>
+
+                    </form>
+                </div>
+
+            </div>
+            <!-- end panel -->
+        </div>
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Solicitudes Registradas </h4>
+                </div>
+
+                <div class="panel-body">
+                    <table id="data-table" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>N° Tarifa</th>
+                            <th>Proveedor</th>
+                            <th>Fecha Inicio</th>
+                            <th>Fecha Termino</th>
+                            <th>Origen</th>
+                            <th>Destino</th>
+                            <th>Tipo de Camión</th>
+                            <th>Estado</th>
+                            <th>Tarifa</th>
+                            <th>Seleccionar</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td><a href="../../carga_todos.html">2</a></td>
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>12-MAR-17</td>
+                            <td>12-MAR-18</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>45 CONCEPCIÓN</td>
+                            <td>CM40</td>
+                            <td>HABILITADA</td>
+                            <td>360,500</td>
+                            <td><input type="checkbox" value="es"> </td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="../../carga_todos.html">3</a></td>
+                            <td>TRANSPORTES PIPAU</td>
+                            <td>9-MAR-17</td>
+                            <td>10-MAR-18</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>17 TI-TALCA</td>
+                            <td>CM50</td>
+                            <td>HABILITADO</td>
+                            <td>490,500</td>
+                            <td><input type="checkbox" value="es"> </td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="../../carga_todos.html">4</a></td>
+                            <td>TRANSPORTES ALCANTARA</td>
+                            <td>9-SEP-16</td>
+                            <td>10-FEB-17</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>15 ARICA</td>
+                            <td>CM40</td>
+                            <td>VENCIDO</td>
+                            <td>550,500</td>
+                            <td><input type="checkbox" value="es"> </td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="../../carga_todos.html">5</a></td>
+                            <td>TRANSPORTES PIPAU</td>
+                            <td>9-SEP-16</td>
+                            <td>10-AUG-17</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>14 PUERTO MONTT</td>
+                            <td>CM40</td>
+                            <td>HABILITADO</td>
+                            <td>680,000</td>
+                            <td><input type="checkbox" value="es"> </td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="../../carga_todos.html">6</a></td>
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>31-JAN-17</td>
+                            <td>1-AUG-17</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>36 ANTOFAGASTA</td>
+                            <td>CM40</td>
+                            <td>HABILITADO</td>
+                            <td>705,000</td>
+                            <td><input type="checkbox" value="es"> </td>
+                        </tr>
+
+                        </tbody>
+                    </table>
+                    <div class="col-md-1">
+                        <p>
+                            Acciones :
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <p>
+
+                            <button class="btn btn-info" >Cancelar</button>
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+            <!-- end panel -->
+        </div>
+    </div>
+    <!-- end row -->
+</div>
