--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -133,7 +133,7 @@
                     <span>Gestión Transportes</span>
                 </a>
                 <ul class="sub-menu">
-                    <li class="has-sub" ng-class="{active:$state.includes('app.gestion.solicitud')}">
+                    <li class="has-sub" ng-class="{active:$state.includes('app.gestion.planificacion')}">
                         <a href="javascript:;"><b class="caret pull-right"></b>Plafificación</a>
                         <ul class="sub-menu">
                             <li ui-sref-active="active"><a ui-sref="app.gestion.planificacion.historica">Historica</a></li>
@@ -145,6 +145,7 @@
                         <a href="javascript:;"><b class="caret pull-right"></b> Solicitudes</a>
                         <ul class="sub-menu">
                             <li ui-sref-active="active"><a ui-sref="app.gestion.solicitud.programada">Solicitud Programada</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.gestion.solicitud.express">Solicitud EXPRESS</a></li>
                         </ul>
                     </li>
 
