--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -145,7 +145,8 @@
                         <a href="javascript:;"><b class="caret pull-right"></b> Solicitudes</a>
                         <ul class="sub-menu">
                             <li ui-sref-active="active"><a ui-sref="app.gestion.solicitud.programada">Solicitud Programada</a></li>
-                            <li ui-sref-active="active"><a ui-sref="app.gestion.solicitud.express">Solicitud EXPRESS</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.gestion.solicitud.express">Solicitud Express</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.gestion.solicitud.publicar">Solicitud Publicar </a></li>
                         </ul>
                     </li>
 
