--- a/views/Gestion/Control/ingreso.html
+++ b/views/Gestion/Control/ingreso.html
@@ -1,13 +1,14 @@
-<div ng-controller="MonedaTipoCrearController">
+<div >
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
+        <li><a href="javascript:;">Gestión</a></li>
         <li><a href="javascript:;">Control</a></li>
-        <li class="active">Salida</li>
+        <li class="active">30301 - Ingreso</li>
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Control de Salida <small>Gestión del Control</small></h1>
+    <h1 class="page-header">Control de Ingreso <small>Gestión de Viajes</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
@@ -23,24 +24,22 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Formulario de Salida de Vehiculo</h4>
+                    <h4 class="panel-title">Formulario de Ingreso de Vehiculo</h4>
                 </div>
                 <div class="panel-body">
                     <form class="form-horizontal">
                         <div class="form-group">
-                            <label class="col-md-2 control-label">Patente</label>
-                            <div class="col-md-2">
+                            <label class="col-md-3 control-label">Patente</label>
+                            <div class="col-md-3">
                                 <input type="text" class="form-control" placeholder="BBBB-01" ng-model="monet_id"  />
                             </div>
-                            <label class="col-md-1 control-label">RUN</label>
-                            <div class="col-md-1">
-                                <input type="text" class="form-control" placeholder="10259635" ng-model="monet_id"  />
-                            </div>
                         </div>
+
+
                         <div class="form-group">
                             <label class="col-md-3 control-label">Enviar</label>
                             <div class="col-md-2">
-                                <button type="submit" class="btn btn-sm btn-success" ng-click="verificarMoneda_Tipo()">Hacer Salida</button>
+                                <button type="submit" class="btn btn-sm btn-success" ng-click="verificarMoneda_Tipo()">Hacer Ingreso</button>
                             </div>
                             <div class="col-md-2">
                                 <button type="submit" class="btn btn-sm btn-info" ng-click="verificarMoneda_Tipo()">Cancelar</button>
@@ -72,31 +71,6 @@
                             <td>1520</td>
                             <td>20</td>
                             <td>ESPERANDO SALIDA</td>
-                        </tr>
-                        </tbody>
-                    </table>
-
-                    <table id="data-table2" class="table table-striped table-bordered">
-                        <thead>
-                        <tr>
-                            <th>Rut</th>
-                            <th>Nombre</th>
-                            <th>Sexo</th>
-                            <th>Fecha Nacimiento</th>
-                            <th>Proveedor</th>
-                            <th>Telefono</th>
-                            <th>Licencia</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr class="odd gradeX">
-                            <td>14558557</td>
-                            <td>Juan Carlos Matamala Duran</td>
-                            <td>Masculino</td>
-                            <td>22/05/1941</td>
-                            <td>TRASPORTES DEL PACIFICO</td>
-                            <td>+56 2 1125 2251</td>
-                            <td>A5</td>
                         </tr>
                         </tbody>
                     </table>
