--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -149,7 +149,7 @@
                             <li ui-sref-active="active"><a ui-sref="app.gestion.solicitud.publicar">Solicitud Publicar </a></li>
                         </ul>
                     </li>
-                    <li class="has-sub" ng-class="{active:$state.includes('app.gestion.planificacion')}">
+                    <li class="has-sub" ng-class="{active:$state.includes('app.gestion.control')}">
                         <a href="javascript:;"><b class="caret pull-right"></b>Control</a>
                         <ul class="sub-menu">
                             <li ui-sref-active="active"><a ui-sref="app.gestion.control.ingreso">Ingreso</a></li>
