--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -156,6 +156,13 @@
                             <li ui-sref-active="active"><a ui-sref="app.gestion.control.salida">Salida</a></li>
                         </ul>
                     </li>
+                    <li class="has-sub" ng-class="{active:$state.includes('app.gestion.sello')}">
+                        <a href="javascript:;"><b class="caret pull-right"></b>Sellos</a>
+                        <ul class="sub-menu">
+                            <li ui-sref-active="active"><a ui-sref="app.gestion.sello.ingreso">Ingreso</a></li>
+
+                        </ul>
+                    </li>
                 </ul>
             </li>
 
