--- a/views/Gestion/Sello/ingreso.html
+++ b/views/Gestion/Sello/ingreso.html
@@ -2,12 +2,13 @@
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
+        <li><a href="javascript:;">Gestión</a></li>
         <li><a href="javascript:;">Sellos</a></li>
-        <li class="active">Ingreso</li>
+        <li class="active">30401 - Ingreso</li>
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Ingreso de Sellos <small>Gestión de Carga</small></h1>
+    <h1 class="page-header">Ingreso de Sellos <small>Gestión de Viajes</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
