--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -163,6 +163,13 @@
 
                         </ul>
                     </li>
+                    <li class="has-sub" ng-class="{active:$state.includes('app.gestion.validaciones')}">
+                        <a href="javascript:;"><b class="caret pull-right"></b>Validaciones</a>
+                        <ul class="sub-menu">
+                            <li ui-sref-active="active"><a ui-sref="app.gestion.validaciones.salida">Salida</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.gestion.validaciones.itinerario">Itinerario</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
 
