--- a/views/Gestion/Validaciones/itinerario.html
+++ b/views/Gestion/Validaciones/itinerario.html
@@ -12,7 +12,7 @@
     <!-- end page-header -->
 
     <!-- begin row -->
-    <div class="row">>
+    <div class="row">
 
             <div class="col-md-12">
                 <!-- begin panel -->
@@ -28,7 +28,7 @@
                     </div>
 
                     <div class="panel-body">
-                        <embed src="iti.pdf">
+                        <embed src="iti.pdf" type="application/pdf">
                         </embed>
                     </div>
                 </div>
