--- a/views/Gestion/Validaciones/itinerario.html
+++ b/views/Gestion/Validaciones/itinerario.html
@@ -24,11 +24,11 @@
                             <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                             <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                         </div>
-                        <h4 class="panel-title">Formulario de Ingreso </h4>
+                        <h4 class="panel-title">Impresion de Itinerario</h4>
                     </div>
 
                     <div class="panel-body">
-                        <embed src="views/Gestion/Validaciones/iti.pdf" type="application/pdf">
+                        <embed src="views/Gestion/Validaciones/iti.pdf" type="application/pdf" with = "800" height="600">
                         </embed>
                     </div>
                 </div>
