--- a/views/Gestion/Validaciones/itinerario.html
+++ b/views/Gestion/Validaciones/itinerario.html
@@ -28,8 +28,10 @@
                     </div>
 
                     <div class="panel-body">
-                        <embed src="views/Gestion/Validaciones/iti.pdf" type="application/pdf" with = "8000" height="1000">
-                        </embed>
+                        <div class="col-md-12">
+                            <embed src="views/Gestion/Validaciones/iti.pdf" type="application/pdf" width = "800" height="600">
+                            </embed>
+                        </div>
                     </div>
                 </div>
             </div>
