--- a/views/Gestion/Validaciones/itinerario.html
+++ b/views/Gestion/Validaciones/itinerario.html
@@ -29,7 +29,7 @@
 
                     <div class="panel-body">
                         <div class="col-md-12">
-                            <embed src="views/Gestion/Validaciones/iti.pdf" type="application/pdf" class="col-md-12">
+                            <embed src="views/Gestion/Validaciones/iti.pdf" type="application/pdf" height="600" class="col-md-12">
                             </embed>
                         </div>
                     </div>
