--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -194,7 +194,7 @@
                     <li class="has-sub" ng-class="{active:$state.includes('app.mantenedores.tarifa')}">
                         <a href="javascript:;"><b class="caret pull-right"></b> Tarifa</a>
                         <ul class="sub-menu">
-                            <li class="has-sub" ng-class="{active:$state.includes('app.mantenedores.troncal')}">
+                            <li class="has-sub" ng-class="{active:$state.includes('app.mantenedores.tarifa.troncal')}">
                                 <a href="javascript:;"><b class="caret pull-right"></b> Troncal</a>
                                 <ul class="sub-menu">
 
