--- a/views/Mantenedores/Tarifa/Troncal/agregar.html
+++ b/views/Mantenedores/Tarifa/Troncal/agregar.html
@@ -1,4 +1,4 @@
-<div ng-controller="30501_Controller">
+<div ng-controller="40501_Controller">
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a ui-sref="app.dashboard">Home</a></li>
@@ -9,7 +9,7 @@
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Agregar Tarifa Troncal<small>Formulario de Ingreso</small></h1>
+    <h1 class="page-header">Agregar Tarifa Troncal<small> Gestión de Mantenedores</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
@@ -25,7 +25,7 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Formulario Creación de Tarifas</h4>
+                    <h4 class="panel-title">Formulario Creación de Tarifas (PASO 1)</h4>
                 </div>
                 <div class="panel-body">
                     <form class="form-horizontal">
@@ -93,6 +93,19 @@
                                 </select>
                             </div>
                         </div>
+
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Tipo de Vehiculo</label>
+                            <div class="col-md-9">
+                                <select class="form-control">
+                                    <option>1 - CM35</option>
+                                    <option>2 - CM40</option>
+
+                                </select>
+                            </div>
+                        </div>
+
+
                         <div class="form-group">
                             <label class="col-md-3 control-label">Estado</label>
                             <div class="col-md-9">
