40503- historial de tarifas crear pantalla 2

--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -199,7 +199,7 @@
                                 <ul class="sub-menu">
 
                                     <li ui-sref-active="active"><a ui-sref="app.mantenedores.tarifa.troncal.agregar">Crear Tarifa</a></li>
-
+                                    <li ui-sref-active="active"><a ui-sref="app.mantenedores.tarifa.troncal.agregar">Crear Tarifa</a></li>
                                 </ul>
                             </li>
                         </ul>
