--- a/views/Gestion/Viaje/editar.html
+++ b/views/Gestion/Viaje/editar.html
@@ -1,4 +1,4 @@
-<div ng-controller="tablaManifiestoDefaultController">
+<div ng-controller="30801_Controller">
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
@@ -101,7 +101,7 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Tabla Manifiestos de Carga </h4>
+                    <h4 class="panel-title">Tabla Viajes</h4>
                 </div>
 
                 <div class="panel-body">
@@ -114,7 +114,7 @@
                             <th>Destino</th>
                             <th>Fecha</th>
                             <th>Estado</th>
-                            <th>Cerrar</th>
+                            <th>Editar</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -181,8 +181,7 @@
                     </div>
                     <div class="col-md-5">
                         <p>
-                            <button class="btn btn-success " >Cerrar Manifiesto</button>
-                            <button class="btn btn-danger " >Anular Manifiesto</button>
+                            <button class="btn btn-success " >Editar Viaje</button>
                             <button class="btn btn-info " >Cancelar</button>
                         </p>
                     </div>
