--- a/views/Gestion/Viaje/editar.html
+++ b/views/Gestion/Viaje/editar.html
@@ -182,7 +182,7 @@
                     <div class="col-md-5">
                         <p>
                             <button class="btn btn-success " ng-click="PRO_EDIT_MANF()">Editar Viaje</button>
-                            <button class="btn btn-info " >Cancelar</button>
+                            <button class="btn btn-info " ng-click="PRO_CANC()">Cancelar</button>
                         </p>
                     </div>
                 </div>
