--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -174,6 +174,7 @@
                         <a href="javascript:;"><b class="caret pull-right"></b>Viaje</a>
                         <ul class="sub-menu">
                             <li ui-sref-active="active"><a ui-sref="app.gestion.viaje.editar">Editar Viaje</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.gestion.viaje.anular">Anular Viaje</a></li>
                         </ul>
                     </li>
                 </ul>
