--- a/views/B2B/Transportista/Solicitud/aceptar.html
+++ b/views/B2B/Transportista/Solicitud/aceptar.html
@@ -3,7 +3,8 @@
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
         <li><a href="javascript:;">B2B</a></li>
-        <li class="active">Aceptar Solicitud</li>
+        <li><a href="javascript:;">Solicitud</a></li>
+        <li class="active">90601 - Aceptar</li>
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
