--- a/views/Gestion/Solicitud/programada.html
+++ b/views/Gestion/Solicitud/programada.html
@@ -49,6 +49,13 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-md-1 control-label"> M3 </label>
+                            <div class="col-md-3">
+                                <input type="text" class="form-control" placeholder="15" ng-model="prov_razon_social" disabled/>
+                            </div>
+
+                        </div>
+                        <div class="form-group">
                             <label class="col-md-3 control-label">Origen</label>
                             <div class="col-md-9">
                                 <select class="form-control" disabled>
