--- a/views/Gestion/Planificacion/historica.html
+++ b/views/Gestion/Planificacion/historica.html
@@ -28,7 +28,7 @@
                 </div>
 
                 <div class="panel-body">
-                    iv class="form-group">
+                    <div class="form-group">
                     <label class="control-label col-md-4">Default Date Time</label>
                     <div class="col-md-8">
                         <div class="input-group date" id="datetimepicker1">
