--- a/views/Gestion/Planificacion/historica.html
+++ b/views/Gestion/Planificacion/historica.html
@@ -30,8 +30,8 @@
                 <div class="panel-body">
                     <form class="form-horizontal">
                         <div class="form-group">
-                            <label class="control-label col-md-4">Default Date Time</label>
-                            <div class="col-md-8">
+                            <label class="control-label col-md-3">Fecha</label>
+                            <div class="col-md-5">
                                 <div class="input-group date" id="datetimepicker1">
                                     <input type="text" class="form-control" />
                                     <span class="input-group-addon">
