--- a/views/Gestion/Planificacion/historica.html
+++ b/views/Gestion/Planificacion/historica.html
@@ -72,11 +72,11 @@
                             <th>Localidad</th>
                             <th>Lunes</th>
                             <th>Martes</th>
-                            <th>Mierco</th>
+                            <th>Miercoles</th>
                             <th>Jueves</th>
-                            <th>Vierne</th>
+                            <th>Viernes</th>
                             <th>Sabado</th>
-                            <th>Doming</th>
+                            <th>Domingo</th>
                             <th>Total</th>
                         </tr>
                         </thead>
@@ -90,7 +90,7 @@
                             <td>215.1</td>
                             <td>215.1</td>
                             <td>215.1</td>
-                            <td>1225.5<td></td>
+                            <td>1225.5</td>
 
                         </tr>
 
