--- a/views/Gestion/Planificacion/historica.html
+++ b/views/Gestion/Planificacion/historica.html
@@ -84,29 +84,161 @@
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">FUERA NORTE</a></td>.
                             <td>215.1</td>
+                            <td>314.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>3225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
                             <td>215.1</td>
+                            <td>314.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>3225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
                             <td>215.1</td>
+                            <td>314.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>3225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
                             <td>215.1</td>
+                            <td>314.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>3225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
                             <td>215.1</td>
+                            <td>314.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>3225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
                             <td>215.1</td>
+                            <td>314.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>3225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
                             <td>215.1</td>
-                            <td>1225.5</td>
-
+                            <td>314.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>3225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
+                            <td>215.1</td>
+                            <td>314.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>3225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
+                            <td>215.1</td>
+                            <td>314.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>3225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
+                            <td>215.1</td>
+                            <td>314.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>3225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
+                            <td>215.1</td>
+                            <td>314.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>3225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
+                            <td>215.1</td>
+                            <td>314.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>3225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
+                            <td>215.1</td>
+                            <td>314.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>3225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
+                            <td>215.1</td>
+                            <td>314.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>3225.5</td>
                         </tr>
 
                         </tbody>
                     </table>
-                    <div class="col-md-1">
-                        <p>
-                            Acciones :
-                        </p>
-                    </div>
-                    <div class="col-md-5">
-                        <p>
-                            <button class="btn btn-success " ng-click="PRO_CREA_SOLIEX()" >Crear</button>
-                            <button class="btn btn-info " ng-click = "PRO_CANC()">Cancelar</button>
-                        </p>
-                    </div>
+
                 </div>
 
             </div>
